...
import com.example.rojgar.repository.JobSeekerRepo
import com.google.firebase.auth.FirebaseUser

class JobSeekerViewModel(val repo: JobSeekerRepo) {

    private val _jobSeeker = MutableLiveData<JobSeekerModel?>()
    val jobSeeker: LiveData<JobSeekerModel?> = _jobSeeker

    private val _loading = MutableLiveData(false)
    val loading: LiveData<Boolean> = _loading

    fun register(
        email: String,
...
